--- a/Downloading_articles_using_links_collected.ipynb
+++ b/Downloading_articles_using_links_collected.ipynb
@@ -24,7 +24,7 @@
     "import pandas as pd\n",
     "\n",
     "\n",
-    "data_path = '~/projects/news_exploration/Data/'"
+    "data_path = '/Users/ruoyangzhang/Documents/PythonWorkingDirectory/news_exploration/Data/'"
    ]
   },
   {
@@ -1369,7 +1369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
