started data preprocessing, run into problem with spacy
data repartition code ok
pre processing wise, planned to rely on spacy for tokenisation, ran into problem with it
otherwise on track

--- a/exploring_reaily_available_article_data_sets.ipynb
+++ b/exploring_reaily_available_article_data_sets.ipynb
@@ -597,11 +597,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Seems like a small enough dataset for prototyping, although this would require quite violent negative sampling for Word2Vec SGNS\n",
+    "\n",
+    "we overwrite data_2 amd 3 in the Data folder"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data_2.to_csv(data_path+'all-the-news/articles2.csv')\n",
+    "data_3.to_csv(data_path+'all-the-news/articles3.csv')"
+   ]
   }
  ],
  "metadata": {
