starting creating the proprocessing class
trying to make streamline easier

--- a/Prototyping_data_preprocessing.ipynb
+++ b/Prototyping_data_preprocessing.ipynb
@@ -745,7 +745,9 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stderr",
