finished first iteration of preprocessing class
need to test and debug

--- a/Prototyping_data_preprocessing.ipynb
+++ b/Prototyping_data_preprocessing.ipynb
@@ -706,6 +706,61 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a,b = 19920229, None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for ele in (a,b):\n",
+    "    if ele != None:\n",
+    "        ele = datetime.datetime.strptime(str(ele), '%Y%m%d')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19920229 None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a,b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hi\n"
+     ]
+    }
+   ],
+   "source": [
+    "if a!= None and not isinstance(a, datetime.datetime):\n",
+    "    print('hi')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
