modification done, might need fine tune later but for now it's fine

--- a/Prototyping_data_preprocessing.ipynb
+++ b/Prototyping_data_preprocessing.ipynb
@@ -17,7 +17,7 @@
     "import pickle\n",
     "import string\n",
     "\n",
-    "data_path = '/Users/ruoyangzhang/Documents/PythonWorkingDirectory/news_exploration/Data/'"
+    "data_path = '../Data/'"
    ]
   },
   {
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,15 +443,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 17908/17908 [01:27<00:00, 204.94it/s]\n",
-      "100%|██████████| 17908/17908 [00:50<00:00, 354.09it/s]\n"
+      "100%|██████████| 17908/17908 [01:41<00:00, 176.62it/s]\n",
+      "100%|██████████| 17908/17908 [00:52<00:00, 340.40it/s]\n"
      ]
     },
     {
@@ -463,19 +463,20 @@
     }
    ],
    "source": [
-    "prepro.pre_process(data_1, 'content', 'date', begin = 20170101, end = 20171231)"
+    "data_dir = '../Data/all-the-news/articles1.csv'\n",
+    "prepro.pre_process(data_dir, 'content', 'date', begin = 20170101, end = 20171231)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 20/20 [00:02<00:00,  9.52it/s]"
+      "100%|██████████| 20/20 [00:02<00:00,  8.37it/s]"
      ]
     },
     {
@@ -499,11 +500,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "prepro.save_to_pickle(data_path+'articles_1_preprocessed.pickle')"
+    "prepro.save_to_pickle(data_path+'all-the-news/')"
    ]
   },
   {
