code seems to train for 2 periods, need to check res

--- a/Testing_Build_Class.ipynb
+++ b/Testing_Build_Class.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,6 +48,47 @@
    "metadata": {},
    "source": [
     "Success"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is for period1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inp_data_path = '../Data/all-the-news/articles_1_1_preprocessed.pickle'\n",
+    "res_data_path = '../Data/training_data/period1/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "building vocab...\n",
+      "working on 2773kth line\n",
+      "build done\n",
+      "converting corpus...\n",
+      "working on 3kth line\n",
+      "conversion done\n"
+     ]
+    }
+   ],
+   "source": [
+    "preprocess = Preprocess(window=5, data_dir=res_data_path)\n",
+    "preprocess.build(inp_data_path, 20000)\n",
+    "preprocess.convert(inp_data_path)"
    ]
   },
   {
