--- a/training_model_test.ipynb
+++ b/training_model_test.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "import numpy as np\n",
     "import pickle\n",
-    "\n",
+    "import os\n",
     "\n",
     "data_path = '../Data/training_data/period0/'"
    ]
@@ -60,7 +60,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -10952,13 +10954,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "name = 'period1'\n",
-    "data_dir_1 = '../Data/training_data/period1/'\n",
-    "data_dir_0 = '../Data/training_data/period0/'\n",
+    "data_dir_1 = 'home/paperspace/projects/news_exploration/Data/training_data/period1/'\n",
+    "data_dir_0 = 'home/paperspace/projects/news_exploration/Data/training_data/period0/'\n",
     "save_dir = data_dir_1\n",
     "e_dim = 300\n",
     "n_negs = 40\n",
@@ -10967,13 +10969,12 @@
     "ss_t = 1e-5\n",
     "conti = False\n",
     "weights = True\n",
-    "cuda = True\n",
-    "data_dir_0 = None"
+    "cuda = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -10982,72 +10983,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "  0%|          | 0/2709 [00:00<?, ?it/s]\u001b[A\n",
-      "[Epoch 1]:   0%|          | 0/2709 [00:00<?, ?it/s]\u001b[A\n",
-      "[Epoch 1]:   0%|          | 0/2709 [00:00<?, ?it/s, loss=28.4]\u001b[A\n",
-      "[Epoch 1]:   0%|          | 1/2709 [00:00<15:24,  2.93it/s, loss=28.4]\u001b[A\n",
-      "[Epoch 1]:   0%|          | 1/2709 [00:00<23:43,  1.90it/s, loss=28.4]\u001b[A\n",
-      "[Epoch 1]:   0%|          | 2/2709 [00:00<11:53,  3.80it/s, loss=28.4]\u001b[A\n",
-      "[Epoch 1]:   0%|          | 2/2709 [00:00<15:22,  2.93it/s, loss=28.4]\u001b[A\n",
-      "[Epoch 1]:   0%|          | 3/2709 [00:00<10:15,  4.39it/s, loss=28.4]\u001b[A\n",
-      "[Epoch 1]:   0%|          | 3/2709 [00:00<12:36,  3.58it/s, loss=28.4]\u001b[A\n",
-      "[Epoch 1]:   0%|          | 4/2709 [00:00<09:28,  4.76it/s, loss=28.4]\u001b[A\n",
-      "[Epoch 1]:   0%|          | 4/2709 [00:00<11:12,  4.02it/s, loss=28.4]\u001b[A\n",
-      "[Epoch 1]:   0%|          | 5/2709 [00:00<08:58,  5.02it/s, loss=28.4]\u001b[A\n",
-      "[Epoch 1]:   0%|          | 5/2709 [00:01<10:21,  4.35it/s, loss=28.4]\u001b[A\n",
-      "[Epoch 1]:   0%|          | 6/2709 [00:01<08:38,  5.22it/s, loss=28.4]\u001b[A\n",
-      "[Epoch 1]:   0%|          | 6/2709 [00:01<09:46,  4.61it/s, loss=28.4]\u001b[A\n",
-      "[Epoch 1]:   0%|          | 7/2709 [00:01<08:23,  5.37it/s, loss=28.4]\u001b[A\n",
-      "[Epoch 1]:   0%|          | 7/2709 [00:01<09:22,  4.80it/s, loss=28.4]\u001b[A\n",
-      "[Epoch 1]:   0%|          | 8/2709 [00:01<08:12,  5.49it/s, loss=28.4]\u001b[A\n",
-      "[Epoch 1]:   0%|          | 8/2709 [00:01<09:03,  4.97it/s, loss=28.3]\u001b[A\n",
-      "[Epoch 1]:   0%|          | 9/2709 [00:01<08:03,  5.58it/s, loss=28.3]\u001b[A\n",
-      "[Epoch 1]:   0%|          | 9/2709 [00:01<08:49,  5.10it/s, loss=28.3]\u001b[A\n",
-      "[Epoch 1]:   0%|          | 10/2709 [00:01<07:56,  5.67it/s, loss=28.3]\u001b[A\n",
-      "[Epoch 1]:   0%|          | 10/2709 [00:01<08:37,  5.22it/s, loss=28.3]\u001b[A\n",
-      "[Epoch 1]:   0%|          | 11/2709 [00:01<07:50,  5.73it/s, loss=28.3]\u001b[A\n",
-      "[Epoch 1]:   0%|          | 11/2709 [00:02<08:28,  5.31it/s, loss=28.2]\u001b[A\n",
-      "[Epoch 1]:   0%|          | 12/2709 [00:02<07:46,  5.79it/s, loss=28.2]\u001b[A\n",
-      "[Epoch 1]:   0%|          | 12/2709 [00:02<08:20,  5.39it/s, loss=28.2]\u001b[A\n",
-      "[Epoch 1]:   0%|          | 13/2709 [00:02<07:42,  5.83it/s, loss=28.2]\u001b[A\n",
-      "[Epoch 1]:   0%|          | 13/2709 [00:02<08:14,  5.45it/s, loss=28.1]\u001b[A\n",
-      "[Epoch 1]:   1%|          | 14/2709 [00:02<07:39,  5.86it/s, loss=28.1]\u001b[A\n",
-      "[Epoch 1]:   1%|          | 14/2709 [00:02<08:09,  5.51it/s, loss=28]  \u001b[A\n",
-      "[Epoch 1]:   1%|          | 15/2709 [00:02<07:36,  5.90it/s, loss=28]\u001b[A\n",
-      "[Epoch 1]:   1%|          | 15/2709 [00:02<08:03,  5.57it/s, loss=28]\u001b[A\n",
-      "[Epoch 1]:   1%|          | 16/2709 [00:02<07:33,  5.94it/s, loss=28]\u001b[A\n",
-      "[Epoch 1]:   1%|          | 16/2709 [00:02<07:59,  5.62it/s, loss=27.9]\u001b[A\n",
-      "[Epoch 1]:   1%|          | 17/2709 [00:02<07:31,  5.96it/s, loss=27.9]\u001b[A\n",
-      "[Epoch 1]:   1%|          | 17/2709 [00:03<07:55,  5.66it/s, loss=27.8]\u001b[A\n",
-      "[Epoch 1]:   1%|          | 18/2709 [00:03<07:29,  5.98it/s, loss=27.8]\u001b[A\n",
-      "[Epoch 1]:   1%|          | 18/2709 [00:03<07:52,  5.70it/s, loss=27.7]\u001b[A\n",
-      "[Epoch 1]:   1%|          | 19/2709 [00:03<07:27,  6.00it/s, loss=27.7]\u001b[A\n",
-      "[Epoch 1]:   1%|          | 19/2709 [00:03<08:25,  5.32it/s, loss=27.6]Exception in thread Thread-5:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/paperspace/anaconda3/envs/fastai/lib/python3.6/threading.py\", line 916, in _bootstrap_inner\n",
-      "    self.run()\n",
-      "  File \"/home/paperspace/anaconda3/envs/fastai/lib/python3.6/site-packages/tqdm/_tqdm.py\", line 144, in run\n",
-      "    for instance in self.tqdm_cls._instances:\n",
-      "  File \"/home/paperspace/anaconda3/envs/fastai/lib/python3.6/_weakrefset.py\", line 60, in __iter__\n",
-      "    for itemref in self.data:\n",
-      "RuntimeError: Set changed size during iteration\n",
-      "\n",
-      "[Epoch 1]:  13%|█▎        | 355/2709 [00:52<05:48,  6.75it/s, loss=6.33]"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-16f5c8c312f5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m train(name = name, data_dir_1 = data_dir_1, save_dir = save_dir,\n\u001b[1;32m      2\u001b[0m       \u001b[0me_dim\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0me_dim\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_negs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mn_negs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepoch\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mepoch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmb\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m       ss_t = ss_t, conti = conti, weights = weights, cuda = cuda, data_dir_0 = data_dir_0)\n\u001b[0m",
-      "\u001b[0;32m~/projects/news_exploration/News_data_exploration/train.py\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(name, data_dir_1, save_dir, e_dim, n_negs, epoch, mb, ss_t, conti, weights, cuda, data_dir_0)\u001b[0m\n\u001b[1;32m     99\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    100\u001b[0m                 \u001b[0mrwords_dict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 101\u001b[0;31m             \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msgns\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miword\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mowords\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrwords_dict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    102\u001b[0m             \u001b[0moptim\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzero_grad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    103\u001b[0m             \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/fastai/lib/python3.6/site-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m    475\u001b[0m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_slow_forward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    476\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 477\u001b[0;31m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    478\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mhook\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_forward_hooks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    479\u001b[0m             \u001b[0mhook_result\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/projects/news_exploration/News_data_exploration/model.py\u001b[0m in \u001b[0;36mforward\u001b[0;34m(self, iword, owords, rwords_dict)\u001b[0m\n\u001b[1;32m     79\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mweights\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     80\u001b[0m             \u001b[0;31m# sampling negative words, per batch we have context_size * self.n_negs number of negative words\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 81\u001b[0;31m             \u001b[0mnwords\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmultinomial\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mweights\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch_size\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mcontext_size\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mn_negs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreplacement\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mview\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     82\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     83\u001b[0m             \u001b[0mnwords\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFT\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcontext_size\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mn_negs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0muniform_\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvocab_size\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlong\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "[Epoch 1]: 100%|██████████| 2709/2709 [06:34<00:00,  6.87it/s, loss=5.47]\n",
+      "[Epoch 2]: 100%|██████████| 2709/2709 [06:35<00:00,  6.85it/s, loss=5.28]\n",
+      "[Epoch 3]: 100%|██████████| 2709/2709 [06:35<00:00,  6.85it/s, loss=5.15]\n",
+      "[Epoch 4]: 100%|██████████| 2709/2709 [06:34<00:00,  6.86it/s, loss=5.11]\n",
+      "[Epoch 5]: 100%|██████████| 2709/2709 [06:34<00:00,  6.86it/s, loss=5.1] \n",
+      "[Epoch 6]: 100%|██████████| 2709/2709 [06:34<00:00,  6.87it/s, loss=4.77]\n",
+      "[Epoch 7]: 100%|██████████| 2709/2709 [06:35<00:00,  6.85it/s, loss=5.01]\n",
+      "[Epoch 8]: 100%|██████████| 2709/2709 [06:34<00:00,  6.86it/s, loss=4.66]\n",
+      "[Epoch 9]: 100%|██████████| 2709/2709 [06:35<00:00,  6.84it/s, loss=4.93]\n",
+      "[Epoch 10]: 100%|██████████| 2709/2709 [06:35<00:00,  6.85it/s, loss=5.07]\n"
      ]
     }
    ],
@@ -11055,6 +11000,44 @@
     "train(name = name, data_dir_1 = data_dir_1, save_dir = save_dir,\n",
     "      e_dim = e_dim, n_negs = n_negs, epoch = epoch, mb = mb,\n",
     "      ss_t = ss_t, conti = conti, weights = weights, cuda = cuda, data_dir_0 = data_dir_0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's see if the same words' vectors are similar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'home/paperspace/projects/news_exploration/Data/training_data/period1period0/idx2word.dat'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-23-3eb7eb6f5c43>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_dir_0\u001b[0m \u001b[0;34m+\u001b[0m\u001b[0;34m'idx2word.dat'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mhandle\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0midx2word_0\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhandle\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'home/paperspace/projects/news_exploration/Data/training_data/period1period0/idx2word.dat'"
+     ]
+    }
+   ],
+   "source": [
+    "with open(data_dir_0 +'idx2word.dat', 'rb') as handle:\n",
+    "    idx2word_0 = pickle.load(handle)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_dir_0"
    ]
   },
   {
