tried turning articles into images, potential for another project

--- a/Prototyping_for_closest_neighbour.ipynb
+++ b/Prototyping_for_closest_neighbour.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,19 +34,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open(data_dir_0 +'idx2word.dat', 'rb') as handle:\n",
-    "    word2idx_0 = pickle.load(handle)\n",
+    "    idx2word_0 = pickle.load(handle)\n",
     "with open(data_dir_1 +'idx2word.dat', 'rb') as handle:\n",
-    "    word2idx_1 = pickle.load(handle)"
+    "    idx2word_1 = pickle.load(handle)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -110,60 +110,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0.        ],\n",
-       "       [ 1.41322863],\n",
-       "       [ 1.67890751],\n",
-       "       ..., \n",
-       "       [ 2.60522723],\n",
-       "       [ 2.80510736],\n",
-       "       [ 2.99639416]], dtype=float32)"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "np.sqrt((test.idx2vec*test.idx2vec).sum(axis = 1)).reshape(test.idx2vec.shape[0],1)"
+    "img_dict = test.n_idx2vec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_dict[0] = np.array([0]*300)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('/home/paperspace/projects/news_exploration/Data/all-the-news/' + 'articles_1_0_preprocessed.pickle', 'rb') as handle:\n",
+    "    articles = pickle.load(handle)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "article1 = articles[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def return_idx(word):\n",
+    "    if word in word2idx_0.keys():\n",
+    "        return(word2idx_0[word])\n",
+    "    else:\n",
+    "        return(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "article1_tok = [return_idx(word) for word in article1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "article1_img = np.array([img_dict[tok] for tok in article1_tok])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "min_val = min([min(elem) for elem in article1_img])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 67,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "article1_img_shift = article1_img - min_val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l2_norm = np.sqrt((article1_img_shift*article1_img_shift).sum(axis = 1)).reshape(703,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "article1_img_shift_norm = article1_img_shift/l2_norm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_val = max([max(tok) for tok in article1_img_shift_norm])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "article1_img_shift_norm_scaled = article1_img_shift_norm/max_val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "heatmap = cv2.applyColorMap(np.uint8(255*article1_img_shift_norm_scaled), cv2.COLORMAP_JET)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[        nan,         nan,         nan, ...,         nan,\n",
-       "                nan,         nan],\n",
-       "       [ 0.05782156, -0.02068115,  0.08293934, ...,  0.03810643,\n",
-       "        -0.03503461, -0.03810913],\n",
-       "       [ 0.05772137, -0.07834933,  0.05175283, ..., -0.01594256,\n",
-       "        -0.08332068, -0.00925662],\n",
-       "       ..., \n",
-       "       [ 0.06418321, -0.03118669, -0.02780835, ...,  0.07485961,\n",
-       "         0.01561127, -0.09230666],\n",
-       "       [-0.11470813, -0.03488817, -0.00468702, ...,  0.0324592 ,\n",
-       "         0.00324436, -0.08247676],\n",
-       "       [ 0.02983147,  0.02589696,  0.01584927, ...,  0.10274093,\n",
-       "        -0.06822093,  0.01764342]], dtype=float32)"
+       "True"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test.n_idx2vec"
+    "cv2.imwrite(data_dir_0+\"article_1.jpg\", np.uint8(255 * heatmap))"
    ]
   },
   {
